--- a/index_mec.html
+++ b/index_mec.html
@@ -27,6 +27,10 @@
 				Presentaci&oacute;</a>
 				</li> 
 
+
+				<li><a href="./documents_general/normes_taller.pdf">
+				Normes Taller</a>
+				</li> 
 								
 				<li><a href="./documents_general/horari_paulino.pdf">
 				Horari Paulino</a>
