--- a/index_mec.html
+++ b/index_mec.html
@@ -40,6 +40,10 @@
 				Diari</a>
 				</li>
  
+				<li><a href="./web_documents/enllacos.html">
+				Enlla&ccedil;os</a>
+				</li>
+ 
 				</ul>
 		</br>
 		</br>
