--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -5,7 +5,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-		<title>enllaç</title>
+		<title>enlla&ccedil;os</title>
 		<!--link type="text/css" rel="stylesheet" href="tecno.css" /-->
 		
 	</head>
@@ -31,6 +31,11 @@
 			Wurth
 			</a></li>
 
+			<li><a href="https://youtu.be/Rk6YHFmFMbk?si=Vr0bI1OlRbMr2DJ9">
+			C&oacute;mo cortar con sierra de arco - v&iacute;deo
+			</a></li>
+
+
 
 			<li><a href="https://tameson.de/pages/bugelsage">
 			Buegelsaege Anwendung
@@ -40,7 +45,7 @@
 			</ul>
 
 	
-			<a href="../index_fred.html">Tornar</a>
+			<a href="../index_mec.html">Tornar</a>
 			</br>
 			</br>
 
