--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -47,6 +47,10 @@
 			</a></li>
 
 
+			<li><a href="https://youtu.be/_Xa8KrsecbQ?si=lXMvfuv4JCIpag4k">
+			04 Tecnicas de Limado HD - v&iacute;deo
+			</a></li>
+
 
 			<li><a href="https://tameson.de/pages/bugelsage">
 			Buegelsaege Anwendung
