--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -61,7 +61,13 @@
 			Taladrar sobre metal
 			</a></li>
 
+			<li><a href="../documents/aula_teoria.pdf">
+			Aula teoria
+			</a></li>
 
+			<li><a href="../documents/aula_taller.pdf">
+			Aula taller
+			</a></li>
 			
 			</ul>
 
