--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -69,6 +69,10 @@
 			Aula taller
 			</a></li>
 			
+			<li><a href="../documents/pisa_papeles_pieza_1.pdf">
+			Pisa papers pe&ccedil;a 1
+			</a></li>
+
 			</ul>
 
 	
