--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -73,6 +73,10 @@
 			Pisa papers pe&ccedil;a 1
 			</a></li>
 
+
+			<li><a href="../documents/pisa_papeles_pieza_2.pdf">
+			Pisa papers pe&ccedil;a 2
+			</a></li>
 			</ul>
 
 	
