--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -79,8 +79,15 @@
 			</a></li>
 
 			<li><a href="../documents/rosca_tuerca_tornillo.pdf">
-			Rosca
+			Rosca - documentaci&oacute;
 			</a></li>
+
+
+			<li><a href="../documents/rosca_pasos_hilos_brocas.pdf">
+			Rosca - taules passos i broques
+			</a></li>
+
+
 
 
 
