--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -68,7 +68,13 @@
 			<li><a href="../documents/aula_taller.pdf">
 			Aula taller
 			</a></li>
+
 			
+
+			<li><a href="../documents/pillar_drill_speed_chart.pdf">
+			Pillar drill speed chart
+			</a></li>
+
 			<li><a href="../documents/pisa_papeles_pieza_1.pdf">
 			Pisa papers pe&ccedil;a 1
 			</a></li>
