--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -84,6 +84,11 @@
 			Pisa papers pe&ccedil;a 2
 			</a></li>
 
+			<li><a href="../documents/pisapapeles.pdf">
+			Pisa papers exemple
+			</a></li>
+
+
 
 			<li><a href="https://www.elmanazas.com/como-hacer-roscas-con-machos-y-terrajas/">
 			C&oacute;mo hacer ROSCAS con MACHOS Y TERRAJAS
