--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -18,6 +18,19 @@
 		<p>
 			<ul>
 
+			<li><a href="../documents/acotacio_exercicis_1.pdf">
+			Acotaci&oacute; exercicis 1
+			</a></li>
+
+			<li><a href="../documents/acotacio_exercicis_2.pdf">
+			Acotaci&oacute; exercicis 2
+			</a></li>
+
+			<li><a href="../documents/ta01_mec.pdf">
+			Treball aut&ograve;nom 1
+			</a></li>
+
+
 			<li><a href="https://www.laherramientabalear.com/">
 			La herramienta balear
 			</a></li>
@@ -112,6 +125,10 @@
 
 			<li><a href="../documents/taller_plano_roscas.pdf">
 			Pl&agrave;nol pieza roscas
+			</a></li>
+
+			<li><a href="https://www.picuino.com/es/index.html">
+			Recursos educativos Picuino
 			</a></li>
 
 
