--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -34,6 +34,10 @@
 			Normes acotaci&oacute;
 			</a></li>
 
+			<li><a href="../documents/classroom/tema_2_representacion_grafica/trazado_representacion_grafica.pdf">
+			Tra&ccedil;at i representaci&oacute; gr&agrave;fica
+			</a></li>
+
 			
 			</ul>
 
