--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -18,12 +18,21 @@
 		<p>
 			<ul>
 
+			<li><a href="https://youtu.be/e33cD5TEx64?si=RvJ44lt1Pb4JlZin">
+			Acotaci&oacute; v&iacute;deo
+			</a></li>
+
 			<li><a href="../documents/acotacio_exercicis_1.pdf">
 			Acotaci&oacute; exercicis 1
 			</a></li>
 
 			<li><a href="../documents/acotacio_exercicis_2.pdf">
 			Acotaci&oacute; exercicis 2
+			</a></li>
+
+
+			<li><a href="../documents/acotacio_exercicis_3.odg">
+			Acotaci&oacute; exercicis 3 format .odg
 			</a></li>
 
 			<li><a href="../documents/ta01_mec.pdf">
