--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -19,7 +19,7 @@
 			<ul>
 
 			<li><a href="https://youtu.be/e33cD5TEx64?si=RvJ44lt1Pb4JlZin">
-			Acotaci&oacute; v&iacute;deo
+			Acotaci&oacute; - v&iacute;deo
 			</a></li>
 
 			<li><a href="../documents/acotacio_exercicis_1.pdf">
@@ -34,6 +34,12 @@
 			<li><a href="../documents/acotacio_exercicis_3.odg">
 			Acotaci&oacute; exercicis 3 format .odg
 			</a></li>
+
+			<li><a href="https://youtu.be/7JU-sObizA8?si=9rvrbM1nAQzIVdn7">
+			Vistes d'un objecte - v&iacute;deo
+			</a></li>
+
+
 
 			<li><a href="../documents/ta01_mec.pdf">
 			Treball aut&ograve;nom 1
