--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -36,8 +36,18 @@
 			</a></li>
 
 			<li><a href="https://youtu.be/7JU-sObizA8?si=9rvrbM1nAQzIVdn7">
-			Vistes d'un objecte - v&iacute;deo
+			Vistes d'un objecte - v&iacute;deo 1
 			</a></li>
+
+			<li><a href="https://youtu.be/iAbjZAG6hHQ?si=1-U94df3KI0fFYSO">
+			Vistes d'un objecte - v&iacute;deo 2
+			</a></li>
+
+			<li><a href="https://youtu.be/p00NZp8hTTU?si=yiYw1SJ4q7jnzOvC">
+			Vistes d'un objecte - v&iacute;deo 3
+			</a></li>
+
+
 
 
 
