--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -30,6 +30,10 @@
 			Acotaci&oacute; exercicis 2
 			</a></li>
 
+			<li><a href="../documents/acotacio_exercicis_3.pdf">
+			Acotaci&oacute; exercicis 3 format .pdf
+			</a></li>
+
 
 			<li><a href="../documents/acotacio_exercicis_3.odg">
 			Acotaci&oacute; exercicis 3 format .odg
