--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -52,6 +52,9 @@
 			</a></li>
 
 
+			<li><a href="../documents/vistes.pdf">
+			Vistes exercicis
+			</a></li>
 
 
 
@@ -151,6 +154,9 @@
 			Rosca - taules passos i broques
 			</a></li>
 
+			<li><a href="../documents/velocidad_broca.pdf">
+			Velocitat broca trepant
+			</a></li>
 
 			<li><a href="../documents/taller_plano_roscas.pdf">
 			Pl&agrave;nol pieza roscas
