--- a/index_mec.html
+++ b/index_mec.html
@@ -35,6 +35,10 @@
 				<li><a href="./web_documents/apunts.html">
 				Apunts</a>
 				</li> 
+
+				<li><a href="./web_documents/examens.html">
+				Examens</a>
+				</li> 
 								
 				<li><a href="./documents/horari_paulino.pdf">
 				Horari Paulino</a>
