--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -38,7 +38,21 @@
 			Tra&ccedil;at i representaci&oacute; gr&agrave;fica
 			</a></li>
 
+
+			<li><a href="../documents/classroom/tema_3_metrologia_mecanizado/tolerancias.pdf">
+			Toler&agrave;ncies
+			</a></li>
 			
+			<li><a href="https://youtu.be/9LC6oZHvNvE?si=2jlw0jWI6-L QIRnN">
+			&Uacute;tils de verificaci&oacute; - v&iacute;deo
+
+			<li><a href="https://youtu.be/l85MJ1j1w4g?si=7nvZcs0UUrn-q2pI">
+			Com llegir un micr&oacute;metre - v&iacute;deo
+
+
+			</a></li>
+
+
 			</ul>
 
 	
