--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -42,6 +42,10 @@
 			<li><a href="../documents/classroom/tema_3_metrologia_mecanizado/tolerancias.pdf">
 			Toler&agrave;ncies
 			</a></li>
+
+			<li><a href="../documents/ejercicios_tolerancias.pdf">
+			Exercicis toler&agrave;ncies
+			</a></li>
 			
 			<li><a href="https://youtu.be/9LC6oZHvNvE?si=2jlw0jWI6-L QIRnN">
 			&Uacute;tils de verificaci&oacute; - v&iacute;deo
