--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -53,6 +53,13 @@
 			<li><a href="https://youtu.be/l85MJ1j1w4g?si=7nvZcs0UUrn-q2pI">
 			Com llegir un micr&oacute;metre - v&iacute;deo
 
+			<li><a href="https://www.stefanelli.eng.br/en/use-reading-micrometer-hundredth-millimeter/">
+			Micr&oacute;metre virtual
+
+			<li><a href="../documents/micrometre_exercici_1.pdf">
+			Micr&oacute;metre exercici 1
+			</a></li>
+
 
 			</a></li>
 
