--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -24,6 +24,10 @@
 			</a></li>
 
 
+			<li><a href="../examens/231205_pms_map22b_examen_sol.pdf">
+			Examen del 05/12/23 - soluci&oacute;
+			</a></li>
+
 
 
 
