--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -19,8 +19,16 @@
 			<ul>
 
 
-			<li><a href="../examens/091123_pms_map22b_examen.pdf">
+			<li><a href="../examens/231109_pms_map22b_examen_v2.pdf">
 			Examen del 09/11/23
+			</a></li>
+
+			<li><a href="../examens/231109_pms_map22b_examen_v2_sol.pdf">
+			Examen del 09/11/23 - soluci&oacute;
+			</a></li>
+
+			<li><a href="../examens/231205_pms_map22b_examen.pdf">
+			Examen del 05/12/23
 			</a></li>
 
 
