--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -70,8 +70,13 @@
 			Vistes exercicis 2
 			</a></li>
 
+			<li><a href="../documents/materiales_1.pdf">
+			Materiales 1
+			</a></li>
 
-
+			<li><a href="../documents/materiales_2.pdf">
+			Materiales 2
+			</a></li>
 
 			</ul>
 
