--- a/web_documents/enllacos.html
+++ b/web_documents/enllacos.html
@@ -164,7 +164,13 @@
 			Peu de rei virtual
 			</a></li>
 
+			<li><a href="https://youtu.be/OrNuIg8gnXo?si=i7Hdc9500sQOKrXS">
+			V&iacute;deo assaig tracci&oacute;
+			</a></li>
 
+			<li><a href="https://youtu.be/tL95JtjC7t4?si=Fk1PLzhYa1awURBm">
+			V&iacute;deo assaig resili&egrave;ncia
+			</a></li>
 
 
 
