--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -78,6 +78,22 @@
 			Materiales 2
 			</a></li>
 
+			<li><a href="../documents/acero_estructural.pdf">
+			Materiales - Acero estructural
+			</a></li>
+
+			<li><a href="../documents/acero_construccion.pdf">
+			Materiales - Acero construcci&oacute;n
+			</a></li>
+
+			<li><a href="../documents/tabla_aceros.pdf">
+			Tabla aceros
+			</a></li>
+
+			<li><a href="../documents/cuestionario_materiales _metalicos.pdf">
+			Cuestionari materials met&agrave;llics
+			</a></li>
+
 			</ul>
 
 	
