--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -78,6 +78,10 @@
 			Materiales 2
 			</a></li>
 
+			<li><a href="../documents/materiales_3.pdf">
+			Materiales 3
+			</a></li>
+
 			<li><a href="../documents/acero_estructural.pdf">
 			Materiales - Acero estructural
 			</a></li>
