--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -98,6 +98,14 @@
 			Cuestionari materials met&agrave;llics
 			</a></li>
 
+			<li><a href="../documents/soldadura_cobre.pdf">
+			Soldadura de tubo de cobre
+			</a></li>
+
+			<li><a href="../documents/practica_soldadura_blanda.pdf">
+			Pr&aacute;ctica soldadura blanda
+			</a></li>
+
 			</ul>
 
 	
