--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -19,23 +19,30 @@
 			<ul>
 
 
-			<li><a href="../examens/231109_pms_map22b_examen_v2.pdf">
+			<li><a href="../documents/examens/examen_231109/231109_pms_map22b_examen_v2.pdf">
 			Examen del 09/11/23
 			</a></li>
 
-			<li><a href="../examens/231109_pms_map22b_examen_v2_sol.pdf">
+			<li><a href="../documents/examens/examen_231109/231109_pms_map22b_examen_v2_sol.pdf">
 			Examen del 09/11/23 - soluci&oacute;
 			</a></li>
 
-			<li><a href="../examens/231205_pms_map22b_examen.pdf">
+			<li><a href="../documents/examens/examen_231205/231205_pms_map22b_examen.pdf">
 			Examen del 05/12/23
 			</a></li>
 
-
-			<li><a href="../examens/231205_pms_map22b_examen_sol.pdf">
+			<li><a href="../documents/examens/examen_231205/231205_pms_map22b_examen_sol.pdf">
 			Examen del 05/12/23 - soluci&oacute;
 			</a></li>
 
+
+			<li><a href="../documents/examens/examen_240220/240220_pms_map22b_examen_a_sol.pdf">
+			Examen del 20/02/24 A -  - soluci&oacute;
+			</a></li>
+
+			<li><a href="../documents/examens/examen_240220/240220_pms_map22b_examen_b_sol.pdf">
+			Examen del 20/02/24 B -  - soluci&oacute;
+			</a></li>
 
 
 
