--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -37,12 +37,17 @@
 
 
 			<li><a href="../documents/examens/examen_240220/240220_pms_map22b_examen_a_sol.pdf">
-			Examen del 20/02/24 A -  - soluci&oacute;
+			Examen del 20/02/24 A - soluci&oacute;
 			</a></li>
 
 			<li><a href="../documents/examens/examen_240220/240220_pms_map22b_examen_b_sol.pdf">
-			Examen del 20/02/24 B -  - soluci&oacute;
+			Examen del 20/02/24 B  - soluci&oacute;
 			</a></li>
+
+			<li><a href="../documents/examens/examen_240220/240220_pms_map22b_examen_eng_sol.pdf">
+			Exam 20/02/24 English - solution
+			</a></li>
+
 
 
 
