--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -76,6 +76,10 @@
 
 
 			<li><a href="../documents/mec_materiales_alum.pdf">
+			Materiales 2 alumnes
+			</a></li>
+
+			<li><a href="../documents/mec_materiales.pdf">
 			Materiales 2
 			</a></li>
 
