--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -105,7 +105,30 @@
 
 			<li><a href="../documents/practica_soldadura_blanda.pdf">
 			Pr&aacute;ctica soldadura blanda
+
 			</a></li>
+
+			<li><a href="https://youtu.be/RpMTRhhhleI?si=rghID1cMpbf8B3Jp">
+			V&iacute;deo soldadura clase 1
+			</a></li>
+
+			<li><a href="https://youtu.be/IWZ2ty5V6Ys?si=3BR-poD978T8k7Bl">
+			V&iacute;deo soldadura clase 2
+			</a></li>
+
+			<li><a href="../documents/soldadura/soldadura_electrica.pdf">
+			Soldadura el&eacute;ctrica - tutorial en pdf - electrodos pag. 155
+			</a></li>
+
+			<li><a href="../documents/soldadura/soldadura_electrodos.pdf">
+			Soldadura el&eacute;ctrica - electrodos datos
+			</a></li>
+
+			<li><a href="../documents/soldadura/practica_cub.pdf">
+			Pr&aacute;ctica cub
+			</a></li>
+
+
 
 			</ul>
 
