--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -120,6 +120,10 @@
 			Soldadura el&eacute;ctrica - tutorial en pdf - electrodos pag. 155
 			</a></li>
 
+			<li><a href="../documents/soldadura/soldadura_electrodos_2.pdf">
+			Soldadura el&eacute;ctrica - electrodos 2
+			</a></li>
+
 			<li><a href="../documents/soldadura/soldadura_electrodos.pdf">
 			Soldadura el&eacute;ctrica - electrodos datos
 			</a></li>
