--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -120,13 +120,18 @@
 			Soldadura el&eacute;ctrica - tutorial en pdf - electrodos pag. 155
 			</a></li>
 
+			<li><a href="../documents/soldadura/soldadura_arco_electrico.pdf">
+			Soldadura el&eacute;ctrica - arco el&eacute;ctrico
+			</a></li>
+
+			<li><a href="../documents/soldadura/soldadura_electrodos.pdf">
+			Soldadura el&eacute;ctrica - electrodos
+			</a></li>
+
 			<li><a href="../documents/soldadura/soldadura_electrodos_2.pdf">
 			Soldadura el&eacute;ctrica - electrodos 2
 			</a></li>
 
-			<li><a href="../documents/soldadura/soldadura_electrodos.pdf">
-			Soldadura el&eacute;ctrica - electrodos datos
-			</a></li>
 
 			<li><a href="../documents/soldadura/practica_cub.pdf">
 			Pr&aacute;ctica cub
