--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -134,7 +134,7 @@
 
 
 			<li><a href="../documents/soldadura/practica_cub.pdf">
-			Pr&aacute;ctica cub
+			Pr&aacute;ctica cub - model informe pr&agrave;ctica
 			</a></li>
 
 
