--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -132,6 +132,16 @@
 			Soldadura el&eacute;ctrica - electrodos 2
 			</a></li>
 
+			<li><a href="https://youtu.be/laXJcA19WpI?si=0pHTDntGJ1OqexsG">
+			V&iacute;deo soldadura MIG/MAG 1
+			</a></li>
+
+			<li><a href="https://youtu.be/EvzUCkmn5-U?si=jcUOglrLMdf2KahO">
+			V&iacute;deo soldadura MIG/MAG 2
+			</a></li>
+
+
+
 
 			<li><a href="../documents/soldadura/practica_cub.pdf">
 			Pr&aacute;ctica cub - model informe pr&agrave;ctica
