--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -140,6 +140,9 @@
 			V&iacute;deo soldadura MIG/MAG 2
 			</a></li>
 
+			<li><a href="../documents/soldadura/gas_caracteristicas.pdf">
+			Gas caractr&iacute;sticas
+			</a></li>
 
 
 
