--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -140,6 +140,20 @@
 			V&iacute;deo soldadura MIG/MAG 2
 			</a></li>
 
+			<li><a href="https://youtu.be/Xr4BUrKDt4k?si=ZkmeCio-ok4yF3Aw">
+			V&iacute;deo curso soladura MIG 1
+			</a></li>
+
+			<li><a href="https://youtu.be/W0aj-rzLNhY?si=r86I25YGypmYStZ4">
+			V&iacute;deo curso soladura MIG 2
+			</a></li>
+
+
+			<li><a href="https://youtu.be/UQR_3vryxfw?si=O-gyYooxVzzVm50R">
+			V&iacute;deo curso soladura MIG 3
+			</a></li>
+
+
 			<li><a href="../documents/soldadura/gas_caracteristicas.pdf">
 			Gas caractr&iacute;sticas
 			</a></li>
