--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -154,8 +154,8 @@
 			</a></li>
 
 
-			<li><a href="../documents/soldadura/gas_caracteristicas.pdf">
-			Gas caractr&iacute;sticas
+			<li><a href="../documents/soldadura/preguntas_mig_mag.pdf">
+			Preguntas solodadura MIG MAG
 			</a></li>
 
 
