--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -156,7 +156,7 @@
 
 
 			<li><a href="../documents/soldadura/preguntas_mig_mag.pdf">
-			Preguntas solodadura MIG MAG
+			Preguntas soldadura MIG MAG
 			</a></li>
 
 			<li><a href="https://youtu.be/cr3_IWsSsjk?si=122eXigUjcoFRmU6">
