--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -163,6 +163,25 @@
 			V&iacute;deo soldadura TIG
 			</a></li>
 
+			<li><a href="https://youtu.be/VRCLY7Ach_0?feature=shared">
+			V&iacute;deo oldadura TIG - curso parte 1
+			</a></li>
+
+			<li><a href="https://youtu.be/p_shZF3njFg?feature=shared">
+			V&iacute;deo oldadura TIG - curso parte 2
+			</a></li>
+
+
+			<li><a href="https://youtu.be/flZraFYwSVw?feature=shared">
+			V&iacute;deo soldadura TIG - afilar tungsteno
+			</a></li>
+
+			<li><a href="https://youtu.be/D81AEg6MG7I?feature=shared">
+			V&iacute;deo soldadura TIG - tungsteno rojo (torio)
+			</a></li>
+
+
+
 
 			<li><a href="../documents/soldadura/practica_cub.pdf">
 			Pr&aacute;ctica cub - model informe pr&agrave;ctica
