--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -141,16 +141,16 @@
 			</a></li>
 
 			<li><a href="https://youtu.be/Xr4BUrKDt4k?si=ZkmeCio-ok4yF3Aw">
-			V&iacute;deo curso soladura MIG 1
+			V&iacute;deo curso soladura MIG 1 - Apasol
 			</a></li>
 
 			<li><a href="https://youtu.be/W0aj-rzLNhY?si=r86I25YGypmYStZ4">
-			V&iacute;deo curso soladura MIG 2
+			V&iacute;deo curso soladura MIG 2 - Apasol
 			</a></li>
 
 
 			<li><a href="https://youtu.be/UQR_3vryxfw?si=O-gyYooxVzzVm50R">
-			V&iacute;deo curso soladura MIG 3
+			V&iacute;deo curso soladura MIG 3 - Apasol
 			</a></li>
 
 
@@ -159,16 +159,17 @@
 			Preguntas soldadura MIG MAG
 			</a></li>
 
-			<li><a href="https://youtu.be/cr3_IWsSsjk?si=122eXigUjcoFRmU6">
-			V&iacute;deo soldadura TIG
-			</a></li>
 
 			<li><a href="https://youtu.be/VRCLY7Ach_0?feature=shared">
-			V&iacute;deo soldadura TIG - curso parte 1
+			V&iacute;deo soldadura TIG - curso parte 1 Apasol
 			</a></li>
 
 			<li><a href="https://youtu.be/p_shZF3njFg?feature=shared">
-			V&iacute;deo soldadura TIG - curso parte 2
+			V&iacute;deo soldadura TIG - curso parte 2 Apasol
+			</a></li>
+
+			<li><a href="https://youtu.be/cr3_IWsSsjk?si=122eXigUjcoFRmU6">
+			V&iacute;deo soldadura TIG - Metal Mundo
 			</a></li>
 
 
@@ -177,7 +178,7 @@
 			</a></li>
 
 			<li><a href="https://youtu.be/D81AEg6MG7I?feature=shared">
-			V&iacute;deo soldadura TIG - tungsteno rojo (torio)
+			V&iacute;deo soldadura TIG - tungsteno rojo (torio) - Apasol
 			</a></li>
 
 
