--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -192,7 +192,12 @@
 
 
 			<li><a href="https://deingenierias.com/torno/operaciones-en-el-torno/">
-			Torno teor&iacute;a 1
+			Torno teor&iacute;a 1 - Operacions de mecanitzat en torn
+			</a></li>
+
+
+			<li><a href="https://deingenierias.com/torno/partes-del-torno/">
+			Torno teor&iacute;a 2 - Parts i accessoris del torn
 			</a></li>
 
 			<li><a href="../documents/torno/practica_torn_1_informe.pdf">
