--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -200,8 +200,17 @@
 			Torno teor&iacute;a 2 - Parts i accessoris del torn
 			</a></li>
 
+			<li><a href="https://youtu.be/JtH8Qd17FW0?si=nxPPhvzDgtkXPFxk">
+			Torno v&iacute;deo 1 - Trabajos básicos en el mecanizado por arranque de viruta "TORNO"
+			</a></li>
+
+
 			<li><a href="../documents/torno/practica_torn_1_informe.pdf">
 			Pr&agrave;ctica torn 1 informe
+			</a></li>
+
+			<li><a href="../documents/torno/torno_teoria.pdf">
+			Torno teor&iacute;a
 			</a></li>
 
 
