--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -213,6 +213,11 @@
 			Torno teor&iacute;a
 			</a></li>
 
+			<li><a href="../documents/torno/avaluacio_torn_1_posada_paulino.pdf">
+			Exemple avaluaci&oacute; pr&agrave;ctica torn 1
+			</a></li>
+
+
 
 			</ul>
 
