--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -70,6 +70,15 @@
 			</a></li>
 
 
+			<li><a href="../documents/examens/examen_240502/240502_pms_map22b_sol_A.pdf">
+			Examen A del 02/05/24 - soluci&oacute;
+			</a></li>
+
+
+			<li><a href="../documents/examens/examen_240502/240502_pms_map22b_sol_B.pdf">
+			Examen B del 02/05/24 - soluci&oacute;
+			</a></li>
+
 			</ul>
 
 
