--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -79,6 +79,16 @@
 			Examen B del 02/05/24 - soluci&oacute;
 			</a></li>
 
+
+			<li><a href="../documents/examens/examen_240516/240516_pms_map22b_sol_A.pdf">
+			Examen A del 16/05/24 - soluci&oacute;
+			</a></li>
+
+
+			<li><a href="../documents/examens/examen_240516/240516_pms_map22b_sol_B.pdf">
+			Examen B del 16/05/24 - soluci&oacute;
+			</a></li>
+
 			</ul>
 
 
