--- a/web_documents/apunts.html
+++ b/web_documents/apunts.html
@@ -100,6 +100,13 @@
 			Cuestionari materials met&agrave;llics
 			</a></li>
 
+
+			<li><a href="http://www.fondear.org/infonautic/Barco/Diseno_Construccion/Mat_Cascos_Oceanicos/Mat_Cascos_Oceanicos.htm">
+			Materiales y Cascos Oce&aacute;nicos - Fondear
+			</a></li>
+
+
+
 			<br>Soldadura tub de coure
 
 			<li><a href="../documents/soldadura_cobre.pdf">
