--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -89,6 +89,19 @@
 			Examen B del 16/05/24 - soluci&oacute;
 			</a></li>
 
+			<li><a href="../documents/examens/examen_240531/240531_pms_map22b_examen_rec_1a_ev_sol.pdf">
+			Examen de recuperaci&oacute; de la 1a avaluaci&oacute; del 31/05/24 - soluci&oacute;
+			</a></li>
+
+
+			<li><a href="../documents/examens/examen_240531/240531_pms_map22b_examen_rec_2a_ev_sol.pdf">
+			Examen de recuperaci&oacute; de la 2a avaluaci&oacute; del 31/05/24 - soluci&oacute;
+			</a></li>
+
+			<li><a href="../documents/examens/examen_240531/240531_pms_map22b_examen_rec_3a_ev_sol.pdf">
+			Examen de recuperaci&oacute; de la 3a avaluaci&oacute; del 31/05/24 - soluci&oacute;
+			</a></li>
+
 			</ul>
 
 
