--- a/web_documents/examens.html
+++ b/web_documents/examens.html
@@ -102,9 +102,17 @@
 			Examen de recuperaci&oacute; de la 3a avaluaci&oacute; del 31/05/24 - soluci&oacute;
 			</a></li>
 
+
+			<li><a href="../documents/examens/examen_240626/240626_pms_map22b_examen_rec_2a_ev_sol.pdf">
+			Examen de recuperaci&oacute; de la 2a avaluaci&oacute; del 31/05/24 - soluci&oacute;
+			</a></li>
+
+
+			<li><a href="../documents/examens/examen_240626/240626_pms_map22b_examen_rec_3a_ev_sol.pdf">
+			Examen de recuperaci&oacute; de la 3a avaluaci&oacute; del 31/05/24 - soluci&oacute;
+			</a></li>
+
 			</ul>
-
-
 	
 			<a href="../index_mec.html">Tornar</a>
 			</br>
